--- a/auth/package.json
+++ b/auth/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watch-all --no-cache"
+    "test": "jest --watch-all --no-cache",
+    "test:ci": "jest"
   },
   "dependencies": {
     "@amp-rehab-app/common": "^1.0.0",
