13 continuous code quality (#16)
* docs(github pr template): added a PR tempalte

Added a GITHUB PR template

#13

* docs(github pr template): amended PR template

* test(app.test signin.ts): fixed code quality and added missing test

* ci(tests.yml): added test with coverage reporting

Added coverage reporting on auth tests.

#13

* ci(jest setup): trying to add code reporting to sonarcloud.io

* ci(package.json): installed package in wrong location

Co-authored-by: Adam Turner <adam.turner@and.digital>

--- a/auth/package.json
+++ b/auth/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^25.2.3",
     "@types/supertest": "^2.0.9",
     "jest": "^26.0.1",
+    "jest-sonar-reporter": "^2.0.0",
     "mongodb-memory-server": "^6.6.1",
     "supertest": "^4.0.2",
     "ts-jest": "^26.0.0"
@@ -36,6 +37,12 @@
     "testEnvironment": "node",
     "setupFilesAfterEnv": [
       "./src/test/setup.ts"
+    ],
+    "collectCoverage": true,
+    "testResultsProcessor": "jest-sonar-reporter",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
     ]
   }
 }
