13 continuous code quality (#17)
* docs(github pr template): added a PR tempalte

Added a GITHUB PR template

#13

* docs(github pr template): amended PR template

* test(app.test signin.ts): fixed code quality and added missing test

* ci(tests.yml): added test with coverage reporting

Added coverage reporting on auth tests.

#13

* ci(jest setup): trying to add code reporting to sonarcloud.io

* ci(package.json): installed package in wrong location

* ci(codeclimate): moving to Code Climate

* docs(pr temlate removed): removed misspelt file

* Updated test.yaml file

* Update tests.yml

* ci(code climate): moving to Code Climate

* test(auth/package.json): removed code coverage from test command

Co-authored-by: Adam Turner <adam.turner@and.digital>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "scripts": {
         "git": "git cz",
         "dev": "skaffold dev",
-        "lint": "eslint './**/*.{js,ts,tsx}' --quiet --fix"
+        "lint": "eslint './**/*.{js,ts,tsx}' --quiet --fix",
+        "auth:coverage": "cd auth && yarn coverage",
+        "coverage": "yarn auth:coverage"
     },
     "devDependencies": {
         "@commitlint/cli": "^8.3.5",
