--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,11 +1,17 @@
 name: tests
 
-on:
-  pull_request
+on: pull_request
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - run: cd auth && yarn && yarn test:ci --coverage
+    build:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v2
+            - run: cd auth && yarn
+            - uses: paambaati/codeclimate-action@v2.5.7
+              env:
+                  CC_TEST_REPORTER_ID: b448bc9b1734ce66b732cbc0dda886a0e99c5b9e2a75f5bb116b6839914d0085
+              with:
+                  coverageCommand: yarn coverage
+                  coverageLocations: |
+                      ${{github.workspace}}/auth/coverage/lcov.info:lcov
