--- a/auth/package.json
+++ b/auth/package.json
@@ -1,48 +1,54 @@
 {
-  "name": "auth",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "start": "ts-node-dev --poll src/index.ts",
-    "test": "jest --watch-all --no-cache",
-    "test:ci": "jest"
-  },
-  "dependencies": {
-    "@amp-rehab-app/common": "^1.0.0",
-    "@types/cookie-session": "2.0.39",
-    "@types/express": "^4.17.3",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/mongoose": "^5.7.21",
-    "cookie-session": "^1.4.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "express-validator": "^6.5.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.16",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    "@types/jest": "^25.2.3",
-    "@types/supertest": "^2.0.9",
-    "jest": "^26.0.1",
-    "jest-sonar-reporter": "^2.0.0",
-    "mongodb-memory-server": "^6.6.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "^26.0.0"
-  },
-  "jest": {
-    "preset": "ts-jest",
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./src/test/setup.ts"
-    ],
-    "collectCoverage": true,
-    "testResultsProcessor": "jest-sonar-reporter",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ]
-  }
+    "name": "auth",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "start": "ts-node-dev --poll src/index.ts",
+        "test": "jest --watch-all --no-cache",
+        "test:ci": "jest",
+        "coverage": "jest --coverage"
+    },
+    "dependencies": {
+        "@amp-rehab-app/common": "^1.0.0",
+        "@types/cookie-session": "2.0.39",
+        "@types/express": "^4.17.3",
+        "@types/jsonwebtoken": "^8.5.0",
+        "@types/mongoose": "^5.7.21",
+        "cookie-session": "^1.4.0",
+        "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
+        "express-validator": "^6.5.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^5.9.16",
+        "ts-node-dev": "^1.0.0-pre.44",
+        "typescript": "^3.8.3"
+    },
+    "devDependencies": {
+        "@types/jest": "^25.2.3",
+        "@types/supertest": "^2.0.9",
+        "jest": "^26.0.1",
+        "mongodb-memory-server": "^6.6.1",
+        "supertest": "^4.0.2",
+        "ts-jest": "^26.0.0"
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "setupFilesAfterEnv": [
+            "./src/test/setup.ts"
+        ],
+        "coveragePathIgnorePatterns": [
+            "/node_modules/",
+            "/test/"
+        ],
+        "coverageReporters": [
+            [
+                "lcov",
+                {
+                    "projectRoot": ".."
+                }
+            ]
+        ]
+    }
 }
