--- a/auth/package.json
+++ b/auth/package.json
@@ -43,6 +43,8 @@
             "/test/"
         ],
         "coverageReporters": [
+            "html",
+            "text",
             [
                 "lcov",
                 {
