--- a/infra/k8s/activity-recorder-depl.yaml
+++ b/infra/k8s/activity-recorder-depl.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: auth-depl
+    name: activity-recorder-depl
 spec:
     replicas: 1
     selector:
         matchLabels:
-            app: auth
+            app: activity-recorder
     template:
         metadata:
             labels:
-                app: auth
+                app: activity-recorder
         spec:
             containers:
-                - name: auth
-                  image: amprehabapp/auth
+                - name: activity-recorder
+                  image: amprehabapp/activity-recorder
                   env:
                       - name: JWT_KEY
                         valueFrom:
@@ -25,12 +25,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-    name: auth-srv
+    name: activity-recorder-srv
 spec:
     selector:
-        app: auth
+        app: activity-recorder
     ports:
-        - name: auth
+        - name: activity-recorder
           protocol: TCP
           port: 3000
           targetPort: 3000
