--- a/infra/k8s/activity-recorder-mongo-depl.yaml
+++ b/infra/k8s/activity-recorder-mongo-depl.yaml
@@ -1,28 +1,28 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: auth-mongo-depl
+    name: activity-recorder-mongo-depl
 spec:
     replicas: 1
     selector:
         matchLabels:
-            app: auth-mongo
+            app: activity-recorder-mongo
     template:
         metadata:
             labels:
-                app: auth-mongo
+                app: activity-recorder-mongo
         spec:
             containers:
-                - name: auth-mongo
+                - name: activity-recorder-mongo
                   image: mongo
 ---
 apiVersion: v1
 kind: Service
 metadata:
-    name: auth-mongo-srv
+    name: activity-recorder-mongo-srv
 spec:
     selector:
-        app: auth-mongo
+        app: activity-recorder-mongo
     ports:
         - name: db
           protocol: TCP
