--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,23 +1,24 @@
 name: tests
 on:
-    push:
-        branches:
-            - master
-    pull_request:
-        branches:
-            - master
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - run: cd auth && yarn
-            - uses: paambaati/codeclimate-action@v2.5.7
-              env:
-                  CC_TEST_REPORTER_ID: b448bc9b1734ce66b732cbc0dda886a0e99c5b9e2a75f5bb116b6839914d0085
-              with:
-                  debug: true
-                  coverageCommand: yarn coverage
-                  coverageLocations: |
-                      ${{github.workspace}}/auth/coverage/lcov.info:lcov
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - run: cd auth && yarn
+      - run: cd activity-recorder && yarn
+      - uses: paambaati/codeclimate-action@v2.5.7
+        env:
+          CC_TEST_REPORTER_ID: b448bc9b1734ce66b732cbc0dda886a0e99c5b9e2a75f5bb116b6839914d0085
+        with:
+          debug: true
+          coverageCommand: yarn coverage
+          coverageLocations: |
+            ${{github.workspace}}/auth/coverage/lcov.info:lcov
