React Native Expo Setup (#42)
* feat(react native expo setup): mobile app with eslint/testing

Removed prettier and eslint extensions in root repo to avoid package clashing

* feat(mobile): add React Navigation to mobile app. File structure

Added React Navigation to React Native mobile app for navigation between pages. Updated App.js as an
example/start. Removed amputee.. folder within mobile folder.

33

* feat(mobile): basic folder structure setup

33\

* fix(mobile): removed linting

Temporarily removed linting on mobile app due to issues, to be re-implemented.

* feat(mobile): added airbnb linting to mobile

* feat(mobile): added routes file to contain navigation stack

* fix(mobile): folder Structure alteration

* docs(readme): mobile updates to readme

* fix(mobile): update prettier rules and add coverage script

* feat(mobile): allowing yarn git from within mobile dir

* Update tests.yml

* Update .prettierrc.json

* Update .prettierrc

* Update .prettierrc

* Update package.json

Co-authored-by: Anita Chan <achan@and.digital>
Co-authored-by: Turner <50718647+adamjamesturner93@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "skaffold dev",
     "activity-recorder:coverage": "cd activity-recorder && yarn coverage",
     "auth:coverage": "cd auth && yarn coverage",
-    "coverage": "yarn auth:coverage && yarn activity-recorder:coverage"
+    "mobile:coverage": "cd mobile && yarn coverage",
+    "coverage": "yarn auth:coverage && yarn activity-recorder:coverage && yarn mobile:coverage"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
