--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - run: cd auth && yarn
       - run: cd activity-recorder && yarn
+      - run: cd mobile && yarn
+      - run: cd web && yarn
       - uses: paambaati/codeclimate-action@v2.5.7
         env:
           CC_TEST_REPORTER_ID: b448bc9b1734ce66b732cbc0dda886a0e99c5b9e2a75f5bb116b6839914d0085
