--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,6 +15,7 @@
         "@react-native-community/masked-view": "0.1.6",
         "@react-navigation/native": "^5.5.1",
         "@react-navigation/stack": "^5.5.1",
+        "axios": "^0.19.2",
         "expo": "~37.0.3",
         "prettier": "^2.0.5",
         "prop-types": "^15.7.2",
