fix(api access): fixing network errors between mobile and API

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,34 +1,34 @@
 apiVersion: skaffold/v2alpha3
 kind: Config
 deploy:
-    kubectl:
-        manifests:
-            - ./infra/k8s/*
+  kubectl:
+    manifests:
+      - ./infra/k8s/*
 build:
-    local:
-        push: false
-    artifacts:
-        - image: amprehabapp/auth
-          context: auth
-          docker:
-              dockerfile: Dockerfile
-          sync:
-              manual:
-                  - src: 'src/**/*.ts'
-                    dest: .
-        - image: amprehabapp/activity-recorder
-          context: activity-recorder
-          docker:
-              dockerfile: Dockerfile
-          sync:
-              manual:
-                  - src: 'src/**/*.ts'
-                    dest: .
-        - image: amprehabapp/client
-          context: web
-          docker:
-              dockerfile: Dockerfile
-          sync:
-              manual:
-                  - src: '**/*.js'
-                    dest: .
+  local:
+    push: false
+  artifacts:
+    - image: amprehabapp/auth
+      context: auth
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "src/**/*.ts"
+            dest: .
+    # - image: amprehabapp/activity-recorder
+    #   context: activity-recorder
+    #   docker:
+    #       dockerfile: Dockerfile
+    #   sync:
+    #       manual:
+    #           - src: 'src/**/*.ts'
+    #             dest: .
+    - image: amprehabapp/client
+      context: web
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
+            dest: .
