--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -1,24 +1,23 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-    name: ingress-service
-    annotations:
-        kubernetes.io/ingress.class: nginx
-        nginx.ingress.kubernetes.io/use-regex: 'true'
+  name: ingress-service
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
-    rules:
-        - host: rehabapp.dev
-          http:
-              paths:
-                  - path: /api/users/?(.*)
-                    backend:
-                        serviceName: auth-srv
-                        servicePort: 3000
-                  - path: /api/activity-recorder/?(.*)
-                    backend:
-                        serviceName: activity-recorder-srv
-                        servicePort: 3000
-                  - path: /?(.*)
-                    backend:
-                        serviceName: client-srv
-                        servicePort: 3000
+  rules:
+    - http:
+        paths:
+          - path: /api/users/?(.*)
+            backend:
+              serviceName: auth-srv
+              servicePort: 3000
+          - path: /api/activity-recorder/?(.*)
+            backend:
+              serviceName: activity-recorder-srv
+              servicePort: 3000
+          - path: /?(.*)
+            backend:
+              serviceName: client-srv
+              servicePort: 3000
