4 setup cloud infra (#56)

--- a/.github/workflows/test-activity-recorder.yml
+++ b/.github/workflows/test-activity-recorder.yml
@@ -1,26 +1,20 @@
-name: tests
+name: tests-activity-recorder
 on:
-  push:
-    branches:
-      - master
   pull_request:
-    branches:
-      - master
+    paths:
+      - "activity-recorder/**"
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: cd auth && yarn
       - run: cd activity-recorder && yarn
-      - run: cd mobile && yarn
-      - run: cd web && yarn
       - uses: paambaati/codeclimate-action@v2.5.7
         env:
           CC_TEST_REPORTER_ID: b448bc9b1734ce66b732cbc0dda886a0e99c5b9e2a75f5bb116b6839914d0085
         with:
           debug: true
-          coverageCommand: yarn coverage
+          coverageCommand: yarn activity-recorder:coverage
           coverageLocations: |
-            ${{github.workspace}}/auth/coverage/lcov.info:lcov
+            ${{github.workspace}}/activity-recorder/coverage/lcov.info:lcov
