--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -7,18 +7,17 @@ metadata:
         nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
     rules:
-        - host: rehabapp.dev
-          http:
-              paths:
-                  - path: /api/users/?(.*)
-                    backend:
-                        serviceName: auth-srv
-                        servicePort: 3000
-                  - path: /api/activity-recorder/?(.*)
-                    backend:
-                        serviceName: activity-recorder-srv
-                        servicePort: 3000
-                  - path: /?(.*)
-                    backend:
-                        serviceName: client-srv
-                        servicePort: 3000
+        - http:
+            paths:
+                - path: /api/users/?(.*)
+                  backend:
+                    serviceName: auth-srv
+                    servicePort: 3000
+                - path: /api/activity-recorder/?(.*)
+                  backend:
+                      serviceName: activity-recorder-srv
+                      servicePort: 3000
+                - path: /?(.*)
+                  backend:
+                      serviceName: client-srv
+                      servicePort: 3000
