--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
         "@emotion/core": "^10.0.28",
         "@emotion/native": "^10.0.27",
         "@react-native-community/masked-view": "0.1.6",
+        "@react-navigation/material-bottom-tabs": "^5.2.12",
         "@react-navigation/native": "^5.5.1",
         "@react-navigation/stack": "^5.5.1",
         "axios": "^0.19.2",
