--- a/strava-api/package.json
+++ b/strava-api/package.json
@@ -14,15 +14,21 @@
   "dependencies": {
     "@amp-rehab-app/common": "^1.0.0",
     "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-session": "^2.0.41",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/express-session": "^1.17.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.157",
     "@types/lusca": "^1.6.2",
+    "@types/mongoose": "^5.7.28",
     "@types/node": "^14.0.14",
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cookie-session": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "^0.0.2",
@@ -31,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "lusca": "^1.6.1",
+    "mongoose": "^5.9.20",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
