--- a/strava-api/package.json
+++ b/strava-api/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "@amp-rehab-app/common": "^1.0.0",
+    "@types/bluebird": "^3.5.32",
     "@types/cookie-parser": "^1.4.2",
     "@types/cookie-session": "^2.0.41",
     "@types/cors": "^2.8.6",
@@ -25,6 +26,9 @@
     "@types/node": "^14.0.14",
     "@types/passport": "^1.0.3",
     "@types/passport-local": "^1.0.33",
+    "@types/request": "^2.48.5",
+    "axios": "^0.19.2",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cookie-session": "^1.4.0",
@@ -34,6 +38,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.1",
     "express-validator": "^6.6.0",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "lusca": "^1.6.1",
@@ -45,6 +50,7 @@
     "passport-strava": "^0.2.0",
     "passport-strava-oauth2": ">= 0.1.1",
     "path": "^0.12.7",
+    "request": "^2.88.2",
     "strava-v3": "^2.0.5",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.49",
