--- a/mobile/package.json
+++ b/mobile/package.json
@@ -17,6 +17,7 @@
         "@react-navigation/material-bottom-tabs": "^5.2.12",
         "@react-navigation/native": "^5.5.1",
         "@react-navigation/stack": "^5.5.1",
+        "@use-expo/font": "^2.0.0",
         "axios": "^0.19.2",
         "expo": "~37.0.3",
         "prettier": "^2.0.5",
