--- a/auth/package.json
+++ b/auth/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.16",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
