--- a/mobile/package.json
+++ b/mobile/package.json
@@ -25,6 +25,7 @@
         "react": "^16.13.1",
         "react-dom": "~16.9.0",
         "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+        "react-native-confirmation-code-field": "^6.4.0",
         "react-native-gesture-handler": "~1.6.0",
         "react-native-paper": "^3.10.1",
         "react-native-reanimated": "~1.7.0",
