fix(profile-api): adding entry into skaffold for profile depl (#69)

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -17,6 +17,10 @@ spec:
                   backend:
                       serviceName: activity-recorder-srv
                       servicePort: 3000
+                - path: /api/users/profile/?(.*)
+                  backend:
+                      serviceName: profile-srv
+                      servicePort: 3000
                 - path: /?(.*)
                   backend:
                       serviceName: client-srv
