--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -32,6 +32,14 @@ build:
         manual:
           - src: "**/*.js"
             dest: .
+    - image: eu.gcr.io/dev-rehab-app/profile
+      context: profile
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.js"
+            dest: .
 profiles:
   - name: production
     build:
