--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -21,6 +21,10 @@ spec:
                   backend:
                       serviceName: profile-srv
                       servicePort: 3000
+                - path: /api/swagger/docs
+                  backend:
+                      serviceName: swagger-srv
+                      servicePort: 3000
                 - path: /?(.*)
                   backend:
                       serviceName: client-srv
