--- a/profile/package.json
+++ b/profile/package.json
@@ -18,6 +18,8 @@
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongoose": "^5.7.21",
         "@types/multer": "^1.4.3",
+        "@types/swagger-jsdoc": "^3.0.2",
+        "@types/swagger-ui-express": "^4.1.2",
         "cookie-session": "^1.4.0",
         "cors": "^2.8.5",
         "crypto": "^1.0.1",
@@ -28,6 +30,8 @@
         "mongoose": "^5.9.16",
         "multer": "^1.4.2",
         "path": "^0.12.7",
+        "swagger-jsdoc": "^4.0.0",
+        "swagger-ui-express": "^4.1.4",
         "ts-node-dev": "^1.0.0-pre.44",
         "typescript": "^3.8.3"
     },
