--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -13,7 +13,7 @@ spec:
                   backend:
                     serviceName: auth-srv
                     servicePort: 3000
-                - path: /api/activity-recorder/?(.*)
+                - path: /api/activity/?(.*)
                   backend:
                       serviceName: activity-recorder-srv
                       servicePort: 3000
